--- a/index.html
+++ b/index.html
@@ -6,13 +6,39 @@
     <title>Esto es una tarjeta chula</title>
     <meta charset="utf-8"> <!--http://www.unicode.org-->
     <meta name="descrption" content="Prueba de degradado animado">
-    <meta name="keywords" content="animation, gradient ">
+    <meta name="keywords" content="animation, gradient, css ">
     <meta name="author" content="ZuzonDev | Miguel López Gordo">
 </head>
 
 <body>
     <div id="main-div">
-        <p>Tarjeta chula</p>
-        <br><br>
+        <h1>Tarjeta chula</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas. Arcu risus
+            quis varius quam. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque. Accumsan sit amet
+            nulla facilisi morbi tempus. Nec ullamcorper sit amet risus nullam eget felis eget nunc. Urna nec tincidunt
+            praesent semper feugiat. Pharetra diam sit amet nisl suscipit. Vestibulum mattis ullamcorper velit sed
+            ullamcorper. Scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Tortor vitae purus
+            faucibus ornare suspendisse sed nisi lacus sed.
+        </p>
+        <p>In dictum non consectetur a erat nam at lectus urna. Elementum tempus egestas sed sed risus pretium. Semper
+            eget duis at tellus at urna condimentum mattis pellentesque. Aliquam faucibus purus in massa tempor nec
+            feugiat. Porttitor eget dolor morbi non arcu risus quis varius quam. Viverra mauris in aliquam sem fringilla
+            ut morbi. Vitae purus faucibus ornare suspendisse sed. Tristique sollicitudin nibh sit amet commodo nulla
+            facilisi nullam vehicula. Elementum pulvinar etiam non quam lacus suspendisse faucibus interdum. Pharetra
+            convallis posuere morbi leo urna molestie at. At quis risus sed vulputate odio ut enim blandit volutpat.
+            Aliquam vestibulum morbi blandit cursus risus. Turpis massa sed elementum tempus egestas. Suspendisse
+            faucibus interdum posuere lorem ipsum dolor sit amet. Leo in vitae turpis massa sed elementum tempus. Neque
+            sodales ut etiam sit amet. Arcu cursus euismod quis viverra nibh cras pulvinar. At quis risus sed vulputate
+            odio ut enim blandit.
+        </p>
+        <p>Bibendum est ultricies integer quis auctor elit sed vulputate. Et ultrices neque ornare aenean euismod
+            elementum nisi quis eleifend. Augue ut lectus arcu bibendum at varius. Sed elementum tempus egestas sed sed
+            risus pretium quam. Aenean sed adipiscing diam donec adipiscing. Quam adipiscing vitae proin sagittis nisl
+            rhoncus mattis. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. Ut etiam sit amet
+            nisl purus in mollis nunc. Enim sed faucibus turpis in eu mi bibendum neque egestas. Egestas tellus rutrum
+            tellus pellentesque eu.
+        </p>
     </div>
 </body>
